--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - .env
   web:
-    build: yaroslavandreev/try:last
+    build: yaroslavandreev/api_yamdb/try:last
     restart: always
     volumes:
       - static_value:/app/static/
