--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,18 +1,18 @@
 version: '3.8'
-
 services:
   db:
-    image: postgres:latest
+    image: postgres:13.0-alpine
     volumes:
-      - /var/lib/postgresql/data/
+      - /var/lib/postgresql/data
     env_file:
       - ./.env
   web:
-    build: yaroslavandreev/yamdb_final:latest
+    image: yaroslavandreev/yamdb_final:latest
+    build: ../api_yamdb
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/app/static/:rw
+      - media_value:/app/madia/:rw
     depends_on:
       - db
     env_file:
@@ -20,11 +20,11 @@ services:
   nginx:
     image: nginx:1.21.3-alpine
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - static_value:/var/html/static/:ro
+      - media_value:/var/html/media/:ro
     depends_on:
       - web
 
