--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   db:
-    image: postgres:13.0-alpine
+    image: postgres:latest
     volumes:
       - /var/lib/postgresql/data
     env_file:
@@ -11,8 +11,8 @@ services:
     build: ../api_yamdb
     restart: always
     volumes:
-      - static_value:/app/static/:rw
-      - media_value:/app/madia/:rw
+      - static_value:/app/static/
+      - media_value:/app/madia/
     depends_on:
       - db
     env_file:
@@ -22,9 +22,9 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - static_value:/var/html/static/:ro
-      - media_value:/var/html/media/:ro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
 
