--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -1,4 +1,4 @@
-name: Yamdb_final workflow
+name: Yamdb_final
 
 on: [push]
 
@@ -17,7 +17,8 @@ jobs:
       run: | 
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        pip install -r api_yamdb/requirements.txt 
+        pip install -r api_yamdb/requirements.txt
+
     - name: Test with flake8 and django tests
       run: |
         python -m flake8
@@ -37,6 +38,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }} 
           password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
@@ -66,7 +68,7 @@ jobs:
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
           sudo docker-compose up -d
-          
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
