--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,25 +1,26 @@
 version: '3.8'
+
 services:
   db:
     image: postgres:latest
     volumes:
-      - /var/lib/postgresql/data
+      - /var/lib/postgresql/data/
     env_file:
-      - ./.env
+      - .env
   web:
-    image: yaroslavandreev/yamdb_final:latest
+    build: ../api_yamdb/
     restart: always
     volumes:
       - static_value:/app/static/
-      - media_value:/app/madia/
+      - media_value:/app/media/
     depends_on:
       - db
     env_file:
-      - ./.env
+      - .env
   nginx:
     image: nginx:1.21.3-alpine
     ports:
-      - "8080:80"
+      - "80:80"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - static_value:/var/html/static/
