--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,33 +1,34 @@
-version: '3.8'
+version: '3.8' 
 
-services:
-  db:
-    image: postgres:latest
-    volumes:
-      - /var/lib/postgresql/data/
-    env_file:
-      - .env
-  web:
-    build: yaroslavandreev/yamdb_final:latest
-    restart: always
-    volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
-    depends_on:
-      - db
-    env_file:
-      - .env
-  nginx:
-    image: nginx:1.21.3-alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
-    depends_on:
-      - web
+services: 
+  db: 
+    image: postgres:latest 
+    volumes: 
+      - /var/lib/postgresql/data 
+    env_file: 
+      - ./.env 
 
-volumes:
-  static_value:
-  media_value:
+  web: 
+    image: yaroslavandreev/yamdb_final:latest 
+    restart: always 
+    volumes: 
+      - static_value:/app/static/ 
+      - media_value:/app/madia/ 
+    depends_on: 
+      - db 
+    env_file: 
+      - ./.env 
+  nginx: 
+    image: nginx:1.21.3-alpine 
+    ports: 
+      - "8080:80" 
+    volumes: 
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf 
+      - static_value:/var/html/static/ 
+      - media_value:/var/html/media/ 
+    depends_on: 
+      - web 
+
+volumes: 
+  static_value: 
+  media_value: 
