--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,11 +1,5 @@
-FROM python:3.7
-
-WORKDIR /app
-
-COPY requirements.txt /app
-
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
-
-COPY . /app
-
-CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ]
+FROM python:3.7 
+WORKDIR /app 
+COPY api_yamdb/ ./ 
+RUN pip3 install -r requirements.txt --no-cache-dir 
+CMD ["gunicorn", "api_yamdb.wsgi:application", "--bind", "0:8000" ] 
