--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -43,7 +43,7 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
-          context: api_yamdb 
+          context: api_yamdb/Dockerfile
   deploy:
       runs-on: ubuntu-latest
       needs: build_and_push_to_docker_hub
