--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     restart: always 
     volumes: 
       - static_value:/app/static/ 
-      - media_value:/app/madia/ 
+      - media_value:/app/media/ 
     depends_on: 
       - db 
     env_file: 
