--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
+          context: ./api_yamdb/
           push: true
           tags: yaroslavandreev/yamdb_final:latest
           file: api_yamdb/Dockerfile
@@ -59,7 +60,6 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         passphrase: ${{ secrets.PASSPHRASE }}
         script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
           sudo docker-compose stop
           sudo docker-compose rm web
           touch .env
